# CatchUp

./: .gitignore  README.md  pyproject.toml
apps/cli/: main.py
catchup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configs/: default.yaml
core/asr/: whisper_rt.py
core/audio/: loopback.py  resample.py
core/chunking/: segment_merger.py
core/embed/: encoder.py
core/llm/: lmstudio_client.py
core/rag/: vector_store.py
core/storage/: session.py
core/summarize/: pipeline.py
core/utils/: config.py  logging.py  time.py
docs/: PRD.md
